roles/common/files/iptables.rules
# setting default filter policy
-P INPUT DROP
-P OUTPUT DROP
-P FORWARD DROP

# allow unlimited traffic on loopback
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# prevent ping floods by rate limiting each source address
-A INPUT -p icmp -m icmp --icmp-type 8 -m recent --set --name PING --mask 255.255.255.255 --rsource
-A INPUT -p icmp -m icmp --icmp-type 8 -m recent --update --seconds 4 --hitcount 6 --name PING --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# allow incoming ssh only
-A INPUT -p tcp --dport 22 -m state --state NEW,ESTABLISHED -m recent --set --name ssh --rsource
-A INPUT -p tcp --dport 22 -m state --state NEW,ESTABLISHED -m recent ! --rcheck --seconds 60 --hitcount 4 --name ssh --rsource -j ACCEPT
-A INPUT -p tcp --dport 22 -m state --state NEW,ESTABLISHED -m recent ! --rcheck --seconds 60 --hitcount 4 --name ssh --rsource -j LOG_AND_DROP

# open port ssh tcp port 22
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT

# log and drop
-A LOG_AND_DROP -j LOG --log-prefix "iptables deny: " --log-level 7

# open access to mysql server for lan users only
-I INPUT -p tcp --dport 3306 -j ACCEPT

# log iptables denied calls (access via 'dmesg' command)
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

# make sure nothing comes or goes out of this box
-A INPUT -j DROP
-A OUTPUT -j DROP
-A FORWARD -j DROP

COMMIT
